--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 /* Home Page */
+body{
+    min-width: 100vw;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    background-color: rgb(89, 165, 253);
+}
+
 
 #quizTitle{
     font-family: 'Capriola', sans-serif;
@@ -8,7 +16,7 @@
     border: 5px solid;
     border-radius: 15px;
     margin-top: 20%;
-    height: 300px;
+    height: 500px;
     background-color: rgb(202, 202, 202);
     
 }
@@ -58,7 +66,7 @@ p{
     border: 5px solid;
     border-radius: 15px;
     margin-top: 20%;
-    height: 300px;
+    height: fit-content;
     background-color: rgb(202, 202, 202);
 }
 
@@ -82,3 +90,7 @@ button{
     font-size: 100%;
 
 }
+
+
+/* Finish Page */
+
