--- a/style.css
+++ b/style.css
@@ -7,6 +7,16 @@ body{
     background-color: rgb(89, 165, 253);
 }
 
+#highscoresLink{
+    font-family: 'Capriola', sans-serif;
+    font-size: 30px;
+}
+
+#homeLink{
+    font-family: 'Capriola', sans-serif;
+    font-size: 30px;
+}
+
 
 #quizTitle{
     font-family: 'Capriola', sans-serif;
@@ -16,7 +26,7 @@ body{
     border: 5px solid;
     border-radius: 15px;
     margin-top: 20%;
-    height: 500px;
+    height: 300px;
     background-color: rgb(202, 202, 202);
     
 }
@@ -37,13 +47,11 @@ p{
     background-color: rgb(202, 202, 202);
     color: rgb(0, 184, 0);
     padding: 10px;
-    margin: 10px;
+    margin: 20px;
     border: 2px solid;
     border-radius: 5px;
-    margin-bottom: 30px;
     font-size: x-large;
     
-
 }
 
 /* Highscores page */
@@ -84,13 +92,70 @@ li{
 button{
     margin: 5px;
     align-content: center;
-    width: 30%;
+    width: 90%;
     font-weight: bold;
     font-family: 'Capriola', sans-serif;
     font-size: 100%;
 
 }
 
+.tableEntry {
+    font-family: 'Capriola', sans-serif;
+    text-align: center;
+    padding: 10px;
+    margin: auto;
+    width: 350px;
+    border: 3px solid;
+    border-radius: 15px;
+    margin-top: 20px;
+    height: fit-content;
+    background-color: rgb(202, 202, 202);
+}
 
-/* Finish Page */
 
+#submitButton {
+    font-family: 'Capriola', sans-serif;
+    text-align: center;
+    margin: auto;
+    width: 350px;
+    margin-top: 20px;
+    height: fit-content;
+
+}
+
+input{
+    align-self: center;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Capriola', sans-serif;
+    text-align: center;
+    width: 33%;
+    border: 3px solid;
+    border-radius: 15px;
+    margin-top: 20px;
+    margin-left: 33%;
+    height: 50px;
+    background-color: rgb(202, 202, 202);
+    font-size: larger;
+}
+
+.finishText{
+    align-content: center;
+    text-align: center;
+    font-size: 50px;
+}
+
+.finishPage{
+    min-width: 100vw;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    background-color: rgb(89, 165, 253);
+}
+
+#inputBox{
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    align-self: center;
+}
